# onco_run

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
deliverables/: README_FOR_RECIPIENT.md  run.sh
docker/: entrypoint.sh
predictors/: README.md  example_predictor.py
recipes/: example.yaml
scripts/: build.sh  build_with_recipe.sh  onboard_collaborator.sh  package.sh
src/onco_run/: __init__.py  cli.py  pipeline.py  predictor.py  recipe.py  utils.py
src/onco_run/helpers/: __init__.py  slide_io.py  tiling.py
tests/: test_pipeline.py  test_predictor.py  test_recipe.py
