[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onco_run"
version = "0.1.0"
description = "Model-agnostic WSI inference runner shipped as a Docker image."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "onco_run" }]

# Runner-only deps. Anything model-specific (torch, timm, ...) is provided
# by the docker image (see `[project.optional-dependencies].runtime`) or
# by a predictors/requirements.txt baked at image-build time.
dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Runtime dependencies that the Docker image installs alongside the
# runner so that most predictors don't need a custom container.
runtime = [
    "openslide-python>=1.3.1",
    "Pillow>=10.0",
    "scikit-image>=0.22",
    "scipy>=1.11",
    "h5py>=3.10",
    "torch>=2.1",
    "torchvision>=0.16",
]
test = ["pytest>=8.0"]

[project.scripts]
onco-run = "onco_run.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onco_run = ["py.typed"]
